Refactor dependency injection and update error messages in controllers; add comments to test classes for clarity